# DBS_counts

./: pyproject.toml  readme.md
output/: normalised_counts.txt
pipeline/modules/: filtering_breaks.nf  intersect_breaks.nf  normalise_counts.nf  plotting.nf
pipeline/subworkflow/: subworkflow.nf
pipeline/workflow/breaks_workflow/: breaks_workflow.nf  nextflow.config
scripts/: __init__.py  filtering_reads.py  intersect_breaks.py  normalise_counts.py  plotting.py
scripts/Broken_string_task.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
