# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- Broken_string_task configuration


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

## Generic configuration
[project]
name = "Broken_string_task"
dynamic = [
    "version",
]
requires-python = ">= 3.7"
description = "Broken_string_task"
readme = "README.md"
authors = [
    {name = "Ahmad Zyoud", email = "ahmad.azd@hotmail.com"}
]

license = {text = "Apache License 2.0"}
keywords = [
    "Broken_string_task"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
filtering_reads = "filtering_reads:reads_filtering_process"
intersect_breaks = "intersect_breaks:reads_intersecting_process"
normalise_counts = "normalise_counts:breaks_normalising_process"
plotting = "plotting:plotting_process"


[tool.setuptools]
package-dir = {"" = "scripts"}


[tool.setuptools.packages.find]
where = ["scripts"]  # list of folders that contain the packages (["."] by default)